# TauTranslator

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  01_hello_boolean.tau  02_simple_definition.tau  03_simple_wff.tau  04_equality_test.tau  05_definition_evaluation.tau  06_function_call_syntax.tau  07_parenthesized_wff.tau  08_expression_simplification.tau  09_fsm_minimal_lab.py  10_broken_fsm_proof.py  11_repl_interaction.py  12_fsm_single_step.py  13_fsm_full_simulation.py  15_run_user_spec.py  16_fsm_pure_function_validation.tau  16_run_batch_validation.py  17_fsm_interactive.tau  17_run_interactive_fsm.py  AI_MODEL_INTEGRATION.md  API_KEY_INTEGRATION_GUIDE.md  CANONICAL_VERSIONS.md  CNAME  COMPLETE_STARTUP_GUIDE.md  COMPLETE_TAU_GRAMMAR_ANALYSIS.md  COMPLEX_ENGLISH_PARSER_PLAN.md  DIALOG_SIZING_FIXED.md  Dockerfile  GAMIFIED_EDITION_README.md  INTEGRATION_COMPLETE.md  INTERNAL_SCRIPTS_INVENTORY.md  PHASE1_IMPLEMENTATION_COMPLETE.md  PHASE1_IMPROVEMENT_CHECKLIST.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PROFESSIONAL_MENU_SYSTEM.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  (+95 more)
archive/: debug_frontend.html  install_ubuntu.sh
backend/: grammar_aware_backend.py  integrated_backend.py  integrated_nlp_backend.py  lab_api.py  simple_backend.py  tau_translator_server.py
benchmark_results/: baseline_metrics.json  benchmark_data_20250606_165139.json  performance_report_20250606_165139.txt
config/: .env.example  Dockerfile  docker-compose.yml  gemma-models.json  grammar-files.json  logging_config.py  mutmut.cfg  provider_config.py  pytest.ini
data/: code_analysis_results.json  execution_traces.json  organization_report.json  qt_integration_test_report.json
docs/: 01_parsers_and_grammars.md  02_semantic_analysis.md  ACTUAL_PROJECT_STATUS.md  AUTH_API_EXPLAINED.md  AUTH_CORE_EXPLAINED.md  CLAUDE.md  CNAME  CODE_DOCUMENTATION_INDEX.md  CODE_QUALITY_IMPROVEMENT_PLAN.md  CONFIG_EXPLAINED.md  CORS_SETUP_GUIDE.md  Core_Engine_Design_Outline.md  DEEP_NLP_RESEARCH_2024.md  DICTIONARY_POPULATION_GUIDE.md  DOMAIN_TYPES_EXPLAINED.md  FASTAPI_BACKEND_GUIDE.md  FORMAL_VERIFICATION.md  FRONTEND_DEMO.md  FRONTEND_GUIDE.md  Generative_Social_Simulation_with_Tau.md  HEALTH_MODULE_REFACTORING.md  IDP_DEVELOPER_GUIDE.md  ILR_Specification.md  INTERFACES_EXPLAINED.md  LLM_Interaction_Strategy.md  MANAGER_EXPLAINED.md  MODULAR_ARCHITECTURE_GUIDE.md  NLP_INTENT_DETECTION_RESEARCH_2024.md  PARSER_ENGINE_INTEGRATION.md  PARSER_FAILURE_ANALYSIS_AND_LEARNINGS.md  PARSER_FIXES_SUMMARY.md  PARSER_IMPLEMENTATION_PLAN_IDP.md  PARSER_IMPROVEMENT_STRATEGY.md  PATTERN_LOADER_EXPLAINED.md  PATTERN_TRANSLATOR_EXPLAINED.md  PNF_ILGO_Prompt_Optimizer.md  PRODUCTION_README.md  PRODUCTION_READY_SUMMARY.md  PROJECT_STATUS.md  Plugin_Interface_Specification.md  (+32 more)
example_dictionaries/: agile_requirements.json  security_domain.yaml  simple_terms.csv
examples/: advanced_examples.py  demo_dictionary_loading.py  demo_lmql_translator.py  demo_memory_optimization.py  demo_nlp_features.py  demo_simd_processing.py  demo_ui_features.py  tau_autocomplete_demo.py  tce_tau_accurate_examples.tce
experiments/: README.md  ufo_comparison.py  ufo_comparison_fixed.py  ufo_final_comparison.py  ufo_integration_example.py  ufo_mutation_free_focus.py  ufo_working_example.py
grammars/: grammar_config.json  tce_tau_accurate.ebnf
lean/: Proof.lean  Tau.lean  lake-manifest.json  lakefile.lean
models/: feedback_data.json
mutation_ws/: setup.cfg
mutation_ws2/: setup.cfg
nlp/: dictionary_manager.py  (+4 more)
(+1515 files in other folders)
